putting some touches on player, buttons, tweaking playlist, etc

--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -32,12 +32,12 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="login-login">Email</label>
-              <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
+              <input class="login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="login-password">Password</label>
-                <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
+                <input class="login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Login</button>
@@ -63,16 +63,16 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="signup-email">Email</label>
-              <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
+              <input class="login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
             </div>
             <div class="login-form-group">
               <label class="sr-only" for="signup-password1">Password</label>
-              <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
+              <input class="login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="signup-password2">Password (again)</label>
-                <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
+                <input class="login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">SignUp</button>
@@ -89,7 +89,7 @@ dopepod
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="forgot-email">Email</label>
-                <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                <input class="login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
                 <button class="btn-dope active" type="submit">
@@ -114,12 +114,12 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="login-login">Email</label>
-              <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
+              <input class="login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="login-password">Password</label>
-                <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
+                <input class="login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Login</button>
@@ -145,16 +145,16 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="signup-email">Email</label>
-              <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
+              <input class="login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
             </div>
             <div class="login-form-group">
               <label class="sr-only" for="signup-password1">Password</label>
-              <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
+              <input class="login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="signup-password2">Password (again)</label>
-                <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
+                <input class="login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Signup</button>
@@ -171,7 +171,7 @@ dopepod
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="forgot-email">Email</label>
-                <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                <input class="login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
                 <button class="btn-dope active" type="submit">
@@ -196,12 +196,12 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="login-login">Email</label>
-              <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
+              <input class="login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="login-password">Password</label>
-                <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
+                <input class="login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Login</button>
@@ -227,16 +227,16 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="signup-email">Email</label>
-              <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
+              <input class="login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
             </div>
             <div class="login-form-group">
               <label class="sr-only" for="signup-password1">Password</label>
-              <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
+              <input class="login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="signup-password2">Password (again)</label>
-                <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
+                <input class="login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Signup</button>
@@ -253,7 +253,7 @@ dopepod
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="forgot-email">Email</label>
-                <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                <input class="login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
                 <button class="btn-dope active" type="submit">
@@ -278,12 +278,12 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="login-login">Email</label>
-              <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
+              <input class="login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="login-password">Password</label>
-                <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
+                <input class="login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Login</button>
@@ -309,16 +309,16 @@ dopepod
             {% csrf_token %}
             <div class="login-form-group">
               <label class="sr-only" for="signup-email">Email</label>
-              <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
+              <input class="login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
             </div>
             <div class="login-form-group">
               <label class="sr-only" for="signup-password1">Password</label>
-              <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
+              <input class="login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
             </div>
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="signup-password2">Password (again)</label>
-                <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
+                <input class="login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
                 <button type="submit" class="btn-dope active">Signup</button>
@@ -335,7 +335,7 @@ dopepod
             <div class="form-row">
               <div class="col login-form-group">
                 <label class="sr-only" for="forgot-email">Email</label>
-                <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
+                <input class="login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
                 <button class="btn-dope active" type="submit">
