--- a/index/static/style.css
+++ b/index/static/style.css
@@ -99,6 +99,28 @@ a:hover {
   top: 55px;
   right: 12px;
   background: rgb(0, 191, 165);
+  cursor: pointer;
+  line-height: 32px;
+  height: 34px;
+  width: 34px;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 2px solid rgb(0, 191, 165);
+  color: unset;
+  -webkit-box-shadow: rgba(0, 0, 0, .8) 0 0px 5px;
+  -moz-box-shadow: rgba(0, 0, 0, .8) 0 0px 5px;
+  box-shadow: rgba(0, 0, 0, .8) 0 0px 5px;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
+}
+.scroll-up:hover,
+.scroll-up:focus {
+  color: #fff;
+  outline: none;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
 }
 
 /* BOOTSTRAP COLLAPSE */
@@ -267,8 +289,8 @@ a:hover {
 /* LOGIN-SIGNUP */
 .login-wrapper {
   text-align: center;
-  padding: 10px;
-  max-width: 300px;
+  padding: 20px 0;
+  max-width: 320px;
   margin: auto;
 }
 .login-wrapper h1 {
@@ -284,13 +306,14 @@ a:hover {
   height: 130px;
 }
 .login-field {
-  font-size: unset;
+  width: 100%;
   padding: 4px 8px;
   border-radius: .25rem;
   border: 2px solid rgb(0, 191, 165);
   margin-bottom: 10px;
 }
 .login-field:focus {
+  outline: 0;
   -webkit-box-shadow: inset rgba(0,0,0,.2) -1px -1px 5px, inset rgba(0,0,0,.2) 1px 1px 5px;
   -moz-box-shadow: inset rgba(0,0,0,.2) -1px -1px 5px, inset rgba(0,0,0,.2) 1px 1px 5px;
   box-shadow: inset rgba(0,0,0,.2) -1px -1px 5px, inset rgba(0,0,0,.2) 1px 1px 5px;
@@ -510,9 +533,9 @@ a:hover {
   margin-right: 42px;
   float: left;
 }
-.extra-options {
+.extra-options,
+.player-buttons {
   float: right;
-  padding: 0;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -684,8 +707,7 @@ a:hover {
 .last-played-collapse table {
   margin-top: 10px;
 }
-.last-played-toggle,
-.scroll-up {
+.last-played-toggle {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -708,7 +730,7 @@ a:hover {
 
 /* SEARCH RESULTS */
 .result-box {
-  padding: 10px;
+  padding: 5px;
 }
 .result-box img {
   border-radius: .25rem;
@@ -725,6 +747,7 @@ a:hover {
   transform: scale(1.02);
 }
 .result-box h1, .result-box h2 {
+  word-wrap: break-word;
   font-size: 14px;
   margin-bottom: 5px;
   overflow: hidden;
@@ -796,6 +819,11 @@ a:hover {
   border-bottom: 2px solid rgb(0, 191, 165);
 }
 
+/* PLAYLIST */
+.playlist-form {
+  display: inherit;
+}
+
 /* PLAYER */
 .player-wrapper {
   z-index: 1000;
@@ -832,12 +860,21 @@ a:hover {
   white-space: nowrap;
   font-weight: 600;
 }
-.player-minimize,
-.player-close {
-  float: right;
+.player-close-collapse {
+  text-align: center;
+}
+.player-close-collapse p {
+  font-size: 16px;
+  display: inline-block;
+  color: #fff;
+  margin: 0 10px 10px 0;
+}
+.player-buttons > * {
+  margin-bottom: 5px;
   margin-left: 5px;
 }
-.player-title h1:hover {
+.player-title h1:hover,
+.player-buttons button[aria-expanded="true"] {
   color: #fff;
 }
 .player-wrapper p {
@@ -851,18 +888,19 @@ a:hover {
 }
 .player-date {
   font-size: 12px;
-  margin: 8px 0 0; 
+  margin: 6px 0 0; 
 }
 .player-description {
-  max-height: calc(100vh - 245px);
+  max-height: 250px;
+  max-height: calc(100vh - 350px);
   overflow-y: scroll;
 }
 .player-wrapper.minimize {
-  bottom: -105px;
+  bottom: -110px;
 }
 .player-wrapper audio {
   display: block;
-  margin-top: 10px;
+  margin: 8px 0;
 }
 
 /* LOADERS */
