--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container" id="main-wrapper">
       <div class="row">
-        <button class="last-played-toggle d-none" id="scroll-up">
+        <button class="scroll-up d-none">
           <i class="fas fa-angle-down" title="Expand"></i>
         </button>
         <div class="col-12 order-3 col-md-6 order-md-2" id="left">
