--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -2,16 +2,29 @@
 <div class="container px-0">
   <div class="col-12 col-lg-4 ml-auto">
     <div class="color-1-trans player-wrapper">
+      <div class="collapse fade player-close-collapse" id="player-close-collapse">
+        <p>
+          Close player?
+        </p>
+        <button class="btn-dope player-close">
+          Yes
+        </button>
+        <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
+          No
+        </button>
+      </div>
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
       </a>
-      <a class="btn-dope player-close" href="#">
-        <i class="fas fa-times" title="Close"></i>
-      </a>
-      <a class="btn-dope player-minimize" href="#">
-        <i class="fas fa-minus" title="Minimize"></i>
-      </a>
+      <div class="player-buttons">
+        <button class="btn-dope player-minimize">
+          <i class="fas fa-minus" title="Minimize"></i>
+        </button>
+        <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
+          <i class="fas fa-times" title="Close"></i>
+        </button>
+      </div>
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
         <div class="player-title">
           <h1>
@@ -34,11 +47,9 @@
         <p class="player-description">
           {{ episode.description }}
         </p>
-        <div class="player-buttons">
-          <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
-            <i class="fas fa-download"></i>
-          </a>
-        </div>
+        <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
+          <i class="fas fa-download"></i>
+        </a>
       </div>
       <audio {% if user.is_authenticated %}onended="playNext()"{% endif %} controls preload="metadata" autoplay>
         <source src="{{ episode.url }}"/>
