--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,8 +1,8 @@
 {% if episode %}
 <div class="container px-0">
   <div class="col-12 col-lg-4 ml-auto">
-    <div class="color-1-trans player-wrapper">
-      <div class="collapse fade player-close-collapse" id="player-close-collapse">
+    <div class="color-1-trans" id="player-wrapper">
+      <div class="collapse fade" id="player-close-collapse">
         <p>
           Close player?
         </p>
