--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -87,11 +87,16 @@ dopepod
       {% endif %}
       {% if results.view == 'playlist' %}
         <a class="btn-dope update-playlist" href="{% url 'playlist' %}">
-          Update
+          <i class="fas fa-sync" title="Update"></i>
         </a>
       {% endif %}
       {% if results.view == 'settings' %}
         <button type="submit" class="btn-dope active settings-save">Save</button>
+      {% endif %}
+      {% if results.view == 'last_played' %}
+        <a class="btn-dope update-last-played" href="{% url 'last_played' %}">
+          <i class="fas fa-sync" title="Update"></i>
+        </a>
       {% endif %}
     </div>
     {% if results.alphabet %}
@@ -174,7 +179,7 @@ dopepod
         </div>
       {% elif results.view == 'playlist'%}
         {% include 'episodes.min.html' %}
-      {% elif results.view == 'last-played'%}
+      {% elif results.view == 'last_played'%}
         <div class="row">
           {% include 'last_played.min.html' %}
         </div>
