--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -6,7 +6,7 @@ dopepod
 
 {% block center-stage %}
 <div class="col-12 results color-2-trans {{ results.view }}">
-  {% include 'results-bar.html' %}
+  {% include 'results_bar.html' %}
   <div class="row collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
     {% if results.pages %}
       {% include 'pagination.min.html' %}
