--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -2,18 +2,18 @@
   <div class="row collapse fade view-collapse {% if results.view == 'grid' %}show{% endif %}">
     {% for podcast in results.podcasts1 %}
     <div class="col-lg-2 col-md-3 col-4 result-box">
-      <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.title }}" />
+      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+          alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
-            {{ podcast.title }}
+            {{ podcast.object.title }}
           </strong>
         </h1>
         <h2>
           by
           <strong>
-            {{ podcast.artist }}
+            {{ podcast.object.artist }}
           </strong>
         </h2>
       </a>
@@ -21,18 +21,18 @@
     {% endfor %}
     {% for podcast in results.podcasts2 %}
     <div class="col-lg-2 col-md-3 col-4 result-box">
-      <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.title }}" />
+      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+          alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
-            {{ podcast.title }}
+            {{ podcast.object.title }}
           </strong>
         </h1>
         <h2>
           by
           <strong>
-            {{ podcast.artist }}
+            {{ podcast.object.artist }}
           </strong>
         </h2>
       </a>
@@ -40,18 +40,18 @@
     {% endfor %}
     {% for podcast in results.podcasts3 %}
     <div class="col-lg-2 col-md-3 col-4 result-box">
-      <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.title }}" />
+      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+          alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
-            {{ podcast.title }}
+            {{ podcast.object.title }}
           </strong>
         </h1>
         <h2>
           by
           <strong>
-            {{ podcast.artist }}
+            {{ podcast.object.artist }}
           </strong>
         </h2>
       </a>
@@ -59,18 +59,18 @@
     {% endfor %}
     {% for podcast in results.podcasts4 %}
     <div class="col-lg-2 col-md-3 col-4 result-box">
-      <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.title }}" />
+      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+          alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
-            {{ podcast.title }}
+            {{ podcast.object.title }}
           </strong>
         </h1>
         <h2>
           by
           <strong>
-            {{ podcast.artist }}
+            {{ podcast.object.artist }}
           </strong>
         </h2>
       </a>
@@ -82,8 +82,8 @@
       <ul>
         {% for podcast in results.podcasts1 %}
         <li>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
-            {{ podcast.title }}
+          <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+            {{ podcast.object.title }}
           </a>
         </li>
         {% endfor %}
@@ -93,8 +93,8 @@
       <ul>
         {% for podcast in results.podcasts2 %}
         <li>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
-            {{ podcast.title }}
+          <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+            {{ podcast.object.title }}
           </a>
         </li>
         {% endfor %}
@@ -104,8 +104,8 @@
       <ul>
         {% for podcast in results.podcasts3 %}
         <li>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
-            {{ podcast.title }}
+          <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+            {{ podcast.object.title }}
           </a>
         </li>
         {% endfor %}
@@ -115,8 +115,8 @@
       <ul>
         {% for podcast in results.podcasts4 %}
         <li>
-          <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
-            {{ podcast.title }}
+          <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+            {{ podcast.object.title }}
           </a>
         </li>
         {% endfor %}
