--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -71,13 +71,13 @@
                 {% endif %}
               </p>
               {% if results.view == 'playlist' %}
-              <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-                <h1>{{ episode.podcast }}</h1>
-              </a>
               {% endif %}
               <div class="episode-buttons">
                 {% if user.is_authenticated %}
                   {% if results.view == 'playlist' %}
+                    <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
+                      Show podcast
+                    </a>
                     <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                       {% csrf_token %}
                       <input type="hidden" name="mode" value="remove" />
