--- a/index/static/style.css
+++ b/index/static/style.css
@@ -46,8 +46,8 @@ a:hover {
   font-size: 16px!important;
   color: inherit;
   border: 2px solid rgb(0, 191, 165);
-  min-width: 32px;
-  height: 32px;
+  min-width: 34px;
+  min-height: 34px;
   padding: 3px 6px;
   cursor: pointer;
   font-weight: 600;
@@ -306,6 +306,8 @@ a:hover {
   height: 130px;
 }
 .login-field {
+  background: inherit;
+  color: inherit;
   width: 100%;
   padding: 4px 8px;
   border-radius: .25rem;
