--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -91,7 +91,7 @@ dopepod
         </a>
       {% endif %}
       {% if results.view == 'settings' %}
-        <button type="submit" class="btn-dope active settings-save">Save</button>
+        <button class="btn-dope">Delete Account</button>
       {% endif %}
       {% if results.view == 'last_played' %}
         <a class="btn-dope update-last-played" href="{% url 'last_played' %}">
