--- a/index/static/style.css
+++ b/index/static/style.css
@@ -30,6 +30,9 @@ a:hover {
   color: rgb(46, 46, 46);
   text-align: center;
   padding: 5px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, .3) 0 1px 3px;
+  -moz-box-shadow: rgba(0, 0, 0, .3) 0 1px 3px;
+  box-shadow: rgba(0, 0, 0, .3) 0 1px 3px;
 }
 .cookie-banner h1 {
   display: inline-block;
@@ -289,23 +292,23 @@ a:hover {
 /* LOGIN-SIGNUP */
 .login-wrapper {
   text-align: center;
-  padding: 20px;
-  max-width: 320px;
-  margin: auto;
 }
 .login-wrapper h1 {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 .login-wrapper p {
   font-size: 14px;
   margin-bottom: 10px;
 }
+.login-wrapper {
+  padding: 0 30px;
+}
 .login-content {
   margin-top: 15px;
   height: 130px;
 }
-.login-field {
+.dope-field {
   background: inherit;
   color: inherit;
   width: 100%;
@@ -314,7 +317,7 @@ a:hover {
   border: 2px solid rgb(0, 191, 165);
   margin-bottom: 10px;
 }
-.login-field:focus {
+.dope-field:focus {
   outline: 0;
   -webkit-box-shadow: inset rgba(0,0,0,.2) -1px -1px 5px, inset rgba(0,0,0,.2) 1px 1px 5px;
   -moz-box-shadow: inset rgba(0,0,0,.2) -1px -1px 5px, inset rgba(0,0,0,.2) 1px 1px 5px;
@@ -340,7 +343,7 @@ a:hover {
   flex-wrap: wrap;
 }
 .login-buttons > * {
-  margin: 5px 2.5px;
+  margin: 0 2.5px 10px;
 }
 .login-buttons button {
   cursor: default;
@@ -361,8 +364,8 @@ a:hover {
 }
 
 /* SETTINGS */
-.settings-form {
-  width: 100%;
+.settings-save {
+  margin: 10px 0;
 }
 .settings h1 {
   font-size: 20px;
