--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -98,7 +98,7 @@
           </a>
         </div>
       </div>
-      <button class="last-played-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
+      <button class="dope-toggle" tabindex="{{ forloop.counter }}" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}" aria-expanded="false">
         <i class="fas fa-angle-down" title="Expand"></i>
       </button>
     </div>
