--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container" id="main-wrapper">
       <button class="scroll-up d-none">
-        <i class="fas fa-angle-down" title="Expand"></i>
+        <i class="fas fa-angle-down" title="Up"></i>
       </button>
       <div class="row">
         <div class="col-12 order-3 col-md-6 order-md-2" id="left">
