--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -6,20 +6,28 @@ dopepod
 
 {% block center-stage %}
 <div class="col-12 results color-2-trans dashboard">
-  <h1>
-    Dashboard
-  </h1>
-  <p>
-    You have {{ user.subscription.count }}
-    <a class="subscriptions-link" href="{% url 'subscriptions' %}">
-      subscription{{ user.subscription.count|pluralize }}
-    </a>
-  </p>
-  <p>
-    You have {{ user.episode.count }} episode{{ user.episode.count|pluralize }} on your
-    <a class="playlist-link" href="{% url 'playlist' %}">
-      playlist
-    </a>
-  </p>
+  <div class="row">
+    <div class="col-12 col-md-4 offset-md-4">
+      <h1>
+        Dashboard
+      </h1>
+      <p>
+        {% with user.subscription.count as count %}
+          You have {{ count }}
+          <a class="subscriptions-link" href="{% url 'subscriptions' %}">
+            subscription{{ count|pluralize }}
+          </a>
+        {% endwith %}
+      </p>
+      <p>
+        {% with user.episode.count as count %}
+          You have {{ count }} episode{{ count|pluralize }} on your
+          <a class="playlist-link" href="{% url 'playlist' %}">
+            playlist
+          </a>
+        {% endwith %}
+      </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
