--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -1,19 +1,46 @@
-{% extends results.extend|yesno:'base.min.html,ajax.min.html' %}
+{% extends results.extend|yesno:"base.min.html,ajax.min.html" %}
 
 {% block title %}
-dopepod
+{% if results.view == "showpod" %}
+  Listen to episodes of {{ podcast.title }} on dopepod
+{% else %}
+  dopepod
+{% endif %}
 {% endblock %}
 
 {% block center-stage %}
 <div class="col-12 results color-2-trans {{ results.view }}">
-  {% include 'results_bar.html' %}
+  {% include "results_bar.html" %}
   <div class="row collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
-    {% if results.pages %}
-      {% include 'pagination.min.html' %}
+    {% if results.view == "showpod" %}
+      {% include "showpod.min.html" %}
     {% endif %}
-    <div class="col results-buttons">
-      {% if results.view == 'grid' or results.view == 'list' %}
-        {% if results.view == 'grid' %}
+    <div class="col-12 results-buttons">
+      {% if results.view == "showpod" %}
+        {% if user.is_authenticated %}
+          <form class="d-inline sub-form" action="{% url 'subscribe' %}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="podid" value="{{ results.podcast.podid }}">
+            {% if results.podcast.is_subscribed %}
+              <button type="submit" class="btn-dope sub-button">
+                Unsubscribe
+              </button>
+            {% else %}
+              <button type="submit" class="btn-dope active sub-button">
+                Subscribe
+              </button>
+            {% endif %}
+          </form>
+        {% endif %}
+        <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+          {% if request.is_ajax %} {% include "button_loading.min.html" %} {% else %} Episodes {% endif %}
+        </a>
+        <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+          Reviews
+        </a>
+      {% endif %}
+      {% if results.view == "grid" or results.view == "list" %}
+        {% if results.view == "grid" %}
           <a class="btn-dope view-button active" href="{{ results.view_url }}">
             <span>
               <i class="fas fa-th" title="Toggle View"></i>
@@ -22,7 +49,7 @@ dopepod
               <i class="fas fa-bars" title="Toggle View"></i>
             </span>
           </a>
-        {% elif results.view == 'list' %}
+        {% elif results.view == "list" %}
           <a class="btn-dope view-button active" href="{{ results.view_url }}">
             <span class="d-none">
               <i class="fas fa-th" title="Toggle View"></i>
@@ -66,18 +93,18 @@ dopepod
           </a>
         {% endif %}
       {% endif %}
-      {% if results.selected_provider == 'dopepod' %}
+      {% if results.selected_provider == "dopepod" %}
         <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
           <span>On dopepod</span>
           <span class="d-none">On itunes</span>
         </a>
-      {% elif results.selected_provider == 'itunes' %}
+      {% elif results.selected_provider == "itunes" %}
         <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
           <span class="d-none">On dopepod</span>
           <span>On itunes</span>
         </a>
       {% endif %}
-      {% if results.view == 'subscriptions' %}
+      {% if results.view == "subscriptions" %}
         <a class="btn-dope select-all-button" href="#">
           Select All
         </a>
@@ -85,15 +112,15 @@ dopepod
           Unsubscribe
         </a>
       {% endif %}
-      {% if results.view == 'playlist' %}
+      {% if results.view == "playlist" %}
         <a class="btn-dope update-playlist" href="{% url 'playlist' %}">
           <i class="fas fa-sync" title="Update"></i>
         </a>
       {% endif %}
-      {% if results.view == 'settings' %}
+      {% if results.view == "settings" %}
         <button class="btn-dope">Delete Account</button>
       {% endif %}
-      {% if results.view == 'last_played' %}
+      {% if results.view == "last_played" %}
         <a class="btn-dope update-last-played" href="{% url 'last_played' %}">
           <i class="fas fa-sync" title="Update"></i>
         </a>
@@ -167,30 +194,40 @@ dopepod
     {% endif %}
 
     <div class="col-12 results-content">
-      {% if results.view == 'grid' or results.view == 'list' %}
-        {% include 'search.min.html' %}
-      {% elif results.view == 'charts' %}
+      {% if results.view == "grid" or results.view == "list" %}
+        {% include "search.min.html" %}
+      {% elif results.view == "charts" %}
         <div class="row">
-          {% include 'charts.min.html' %}
+          {% include "charts.min.html" %}
         </div>
-      {% elif results.view == 'subscriptions'%}
+      {% elif results.view == "subscriptions" %}
         <div class="row">
-          {% include 'subscriptions.min.html' %}
+          {% include "subscriptions.min.html" %}
         </div>
-      {% elif results.view == 'playlist'%}
-        {% include 'episodes.min.html' %}
-      {% elif results.view == 'last_played'%}
+      {% elif results.view == "showpod" %}
+        <div class="row showpod-collapse fade collapse show" id="episodes-collapse">
+          {% if results.episodes %} {% include "episodes.min.html" %} {% endif %}
+        </div>
+        <div class="row showpod-collapse fade collapse" id="reviews-collapse">
+          <div class="col-12">
+            <p>
+              Coming soon
+            </p>
+          </div>
+        </div>
+      {% elif results.view == "playlist" %}
         <div class="row">
-          {% include 'last_played.min.html' %}
+          {% include "episodes.min.html" %}
         </div>
-      {% elif results.view == 'settings' %}
-        {% include 'settings.min.html' %}
+      {% elif results.view == "last_played"%}
+        <div class="row">
+          {% include "last_played.min.html" %}
+        </div>
+      {% elif results.view == "settings" %}
+        {% include "settings.min.html" %}
       {% endif %}
     </div>
-
-    {% if results.pages %}
-      {% include 'pagination.min.html' %}
-    {% endif %}
+    
   </div>
 </div>
 {% endblock %}
