--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -2,7 +2,7 @@
   {% with subscription.podcast as podcast %}
     <div class="col-12 col-md-4 subscriptions-box">
       <div class="subscriptions-result clearfix" data-podid="{{ podcast.podid }}">
-        <a class="showpod-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
+        <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="/showpod/{{ podcast.podid }}/" title="{{ podcast.title }}">
           <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
           onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.title }}" />
         </a>
